# KenshiCoop

./: .gitignore  KenshiCoop.sln  README.md
docs/: API_REFERENCE.md  BUILD_SETUP.md
resources/: ARCHITECTURE_REVIEW_2026-07-11.md  BUILD_SETUP.md  CODE_MAP.md  INTENT_REPLICATION.md  MASTER_PLAN.md  NPC_COMBAT_SYNC_HANDOFF.md  POSTMORTEM.md  SESSION_HANDOFF_2026-07-13.md  SQUAD_SYNC_PLAN.md  SYNC_GAPS.md  TOWN_DROP_REPRO.md  VALIDATION_BASELINE.md  WORLD_ITEM_SYNC_HANDOFF.md  resources.md
resources/spikes/: .gitignore  01-spawn-cross-client-resolution.md  02-deterministic-battle-builder.md  03-enumerate-spawn-templates.md  04-faction-creation-hostility.md  05-dll-triggered-save.md  06-equip-loadouts-spawned-npcs.md  08-battle-scale-ceiling.md  (+60 more)
scripts/: CoopHarness.psm1  CoopOracles.psm1  HOST.cmd  JOIN.cmd  analyze_run.ps1  arrange_windows.ps1  bake_scene.ps1  build_netsim.cmd  build_plugin.cmd  build_prototest.cmd  build_tunneltest.cmd  capture_baseline.ps1  check_panel_log.ps1  deploy.cmd  dev_cycle.ps1  friend_host.ps1  friend_join.ps1  host_session.ps1  join_session.ps1  kit_preflight.ps1  lan.config.example.json  lan_host_run.ps1  launch_host.cmd  launch_join.cmd  make_mod_kit.ps1  make_remote_kit.ps1  manual_session.ps1  regress.ps1  rehearse_host_kit.ps1  rehearse_remote_kit.ps1  report_history.ps1  resume_test.ps1  run_lan_test.ps1  run_spike.ps1  run_spikes.ps1  run_test.cmd  run_test.ps1  scenarios.psd1  screenshot.ps1  set_video_mode.ps1  (+7 more)
src/nettest/: CMakeLists.txt  main.cpp
tools/: fix_vs7_registry.ps1  reinstall_redists.ps1  uninstall_redists.ps1
(+109 files in other folders)
